simple-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-api-svc
spec:
  type: ClusterIP
  selector:
    app: simple-api
  ports:
  - name: metrics
    port: 80
    targetPort: 8080
